openshift/prometheus-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: prometheus
  name: prometheus
spec:
  replicas: 1
  selector:
    io.kompose.service: prometheus
  strategy:
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: prometheus
    spec:
      containers:
        - image: ' '
          name: prometheus
          ports:
            - containerPort: 9100
            - containerPort: 9090
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/prometheus
              name: prom-data
      restartPolicy: Always
      volumes:
        - name: prom-data
          persistentVolumeClaim:
            claimName: prom-data
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - prometheus
        from:
          kind: ImageStreamTag
          name: prometheus:latest
      type: ImageChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
