openshift/dbmon-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: dbmon
  name: dbmon
spec:
  ports:
    - name: "dbmon9104"
      port: 9104
      targetPort: 9104
  selector:
    io.kompose.service: dbmon
status:
  loadBalancer: {}
