openshift/grafana-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: grafana
spec:
  host: grafana
  port:
    targetPort: '3000'
  to:
    kind: Service
    name: grafana
